[package]
name = "program-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
nix = "0.23.1"
clap = { version = "3.1.6", features = ["derive"] }
